NetBSD Problem Report #43413

From root@amberdon.eecs.harvard.edu  Fri Jun  4 05:29:37 2010
Return-Path: <root@amberdon.eecs.harvard.edu>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 9F78F63B935
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  4 Jun 2010 05:29:37 +0000 (UTC)
Message-Id: <20100604041303.5107AA9F5@amberdon.eecs.harvard.edu>
Date: Fri,  4 Jun 2010 00:13:03 -0400 (EDT)
From: dholland@eecs.harvard.edu
Reply-To: dholland@eecs.harvard.edu
To: gnats-bugs@gnats.NetBSD.org
Subject: accounting suspend/resume broken
X-Send-Pr-Version: 3.95

>Number:         43413
>Category:       kern
>Synopsis:       accounting suspend/resume broken
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jun 04 05:30:00 +0000 2010
>Closed-Date:    Sat May 21 05:13:00 +0000 2011
>Last-Modified:  Sat May 21 05:13:00 +0000 2011
>Originator:     David A. Holland
>Release:        NetBSD 5.1_RC2
>Organization:
xenotelepathy lab
>Environment:
System: NetBSD amberdon.eecs.harvard.edu 5.1_RC2 NetBSD 5.1_RC2 (GENERIC) #0: Fri May 21 00:29:51 UTC 2010 builds@b7.netbsd.org:/home/builds/ab/netbsd-5-1-RC2/amd64/201005210534Z-obj/home/builds/ab/netbsd-5-1-RC2/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:

Last night while running stress builds the root filesystem filled up
with pacct data.

According to the logs, at 04:09:12 the kernel printed "accounting
suspended"; at 04:09:42 it printed "accounting resumed". The first
disk full message appeared at 04:10:12, from sa (still running from
/etc/daily, I guess), followed by more such messages from the stress
builds. The kernel first printed "Accounting: write failed 28" at
04:10:36. (28 is ENOSPC.) Many more disk full messages, including
from accounting, follow, until the machine fell over some ten minutes
later. The last entry in the log file before rebooting is

        Jun  3 04:20:24 amberdon /netbsd: <

which is moderately suspicious in its own right. Since the log is on
a wapbl volume and not softupdates, this may merely be fs corruption;
however, I don't think so because it isn't on a block boundary.

>How-To-Repeat:

Fill / with accounting turned on. Watch it not suspend and resume
accounting properly.

Having accounting turned on while running stress builds was stupid, but
evidently I forgot to turn it off beforehand.

>Fix:
Dunno.

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43413 CVS commit: src/sys/kern
Date: Sat, 26 Mar 2011 21:31:23 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Mar 26 21:31:23 UTC 2011

 Modified Files:
 	src/sys/kern: kern_acct.c

 Log Message:
 Fix up sign-compare issue checking for free space. Should fix PR 43413
 where accounting doesn't suspend properly.


 To generate a diff of this commit:
 cvs rdiff -u -r1.90 -r1.91 src/sys/kern/kern_acct.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 26 Mar 2011 21:48:49 +0000
State-Changed-Why:
remind me to test this


State-Changed-From-To: feedback->pending-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 05 May 2011 06:46:32 +0000
State-Changed-Why:
Confirmed; now pullup-5 #1618.


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43413 CVS commit: [netbsd-5] src/sys/kern
Date: Fri, 20 May 2011 19:28:57 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Fri May 20 19:28:57 UTC 2011

 Modified Files:
 	src/sys/kern [netbsd-5]: kern_acct.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1618):
 	sys/kern/kern_acct.c: revision 1.91
 Fix up sign-compare issue checking for free space. Should fix PR 43413
 where accounting doesn't suspend properly.


 To generate a diff of this commit:
 cvs rdiff -u -r1.86 -r1.86.12.1 src/sys/kern/kern_acct.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 21 May 2011 05:13:00 +0000
State-Changed-Why:
fixed and pulled up.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.