Fix up sign-compare issue checking for free space. Should fix PR 43413 where accounting doesn't suspend properly.