sys/kern/kern_acct.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: kern_acct.c,v 1.90 2010/11/19 06:44:42 dholland Exp $	*/
+/*	$NetBSD: kern_acct.c,v 1.91 2011/03/26 21:31:23 dholland Exp $	*/
 
 /*-
  * Copyright (c) 1982, 1986, 1989, 1993
@@ -71,7 +71,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: kern_acct.c,v 1.90 2010/11/19 06:44:42 dholland Exp $");
+__KERNEL_RCSID(0, "$NetBSD: kern_acct.c,v 1.91 2011/03/26 21:31:23 dholland Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -174,7 +174,7 @@ acct_chkfree(void)
 {
 	int error;
 	struct statvfs *sb;
-	int64_t bavail;
+	fsblkcnt_t bavail;
 
 	sb = kmem_alloc(sizeof(*sb), KM_SLEEP);
 	if (sb == NULL)
@@ -185,7 +185,11 @@ acct_chkfree(void)
 		return (error);
 	}
 
-	bavail = sb->f_bfree - sb->f_bresvd;
+	if (sb->f_bfree < sb->f_bresvd) {
+		bavail = 0;
+	} else {
+		bavail = sb->f_bfree - sb->f_bresvd;
+	}
 
 	switch (acct_state) {
 	case ACCT_SUSPENDED:
